<resources>
  <string name="UVI_level_0">Weak</string>
  <string name="UVI_level_1">Moderate</string>
  <string name="UVI_level_2">Strong</string>
  <string name="UVI_level_3">Very strong</string>
  <string name="UVI_level_4">Severe</string>
  <string name="a11y_action_pip_move_done">Done</string>
  <string name="a11y_action_pip_move_down">Move down</string>
  <string name="a11y_action_pip_move_left">Move left</string>
  <string name="a11y_action_pip_move_right">Move right</string>
  <string name="a11y_action_pip_move_up">Move up</string>
  <string name="a11y_pip_menu_entered">Picture-in-Picture menu.</string>
  <string name="abbrev_month_day_no_year">MMMd</string>
  <string name="abbrev_wday_month_day_no_year_alarm">EEEMMMd</string>
  <string name="abc_action_bar_home_description">Navigate home</string>
  <string name="abc_action_bar_up_description">Navigate up</string>
  <string name="abc_action_mode_done">Done</string>
  <string name="abc_capital_off">OFF</string>
  <string name="abc_capital_on">ON</string>
  <string name="abc_menu_alt_shortcut_label">Alt+</string>
  <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
  <string name="abc_menu_delete_shortcut_label">delete</string>
  <string name="abc_menu_enter_shortcut_label">enter</string>
  <string name="abc_menu_function_shortcut_label">Function+</string>
  <string name="abc_menu_meta_shortcut_label">Meta+</string>
  <string name="abc_menu_shift_shortcut_label">Shift+</string>
  <string name="abc_menu_space_shortcut_label">space</string>
  <string name="abc_menu_sym_shortcut_label">Sym+</string>
  <string name="abc_prepend_shortcut_label">Menu+</string>
  <string name="abc_search_hint">Search…</string>
  <string name="abc_searchview_description_clear">Clear query</string>
  <string name="abc_searchview_description_search">Search</string>
  <string name="abc_searchview_description_submit">Submit query</string>
  <string name="abc_searchview_description_voice">Voice search</string>
  <string name="abc_slice_more">More</string>
  <string name="abc_slice_more_content">+ %1$d</string>
  <string name="abc_slice_permission_allow">Allow</string>
  <string name="abc_slice_permission_deny">Deny</string>
  <string name="abc_slice_permission_text_1">- It can read information from %1$s</string>
  <string name="abc_slice_permission_text_2">- It can take actions inside %1$s</string>
  <string name="abc_slice_permission_title">Allow %1$s to show %2$s slices?</string>
  <string name="abc_slice_show_more">Show more</string>
  <string name="abc_slice_updated">Updated %1$s</string>
  <string name="abc_toolbar_collapse_description">Collapse</string>
  <string name="accessibility_accessibility_button">Accessibility</string>
  <string name="accessibility_action_divider_bottom_full">Bottom full screen</string>
  <string name="accessibility_action_divider_left_30">Left 30%</string>
  <string name="accessibility_action_divider_left_50">Left 50%</string>
  <string name="accessibility_action_divider_left_70">Left 70%</string>
  <string name="accessibility_action_divider_left_full">Left full screen</string>
  <string name="accessibility_action_divider_right_full">Right full screen</string>
  <string name="accessibility_action_divider_top_30">Top 30%</string>
  <string name="accessibility_action_divider_top_50">Top 50%</string>
  <string name="accessibility_action_divider_top_70">Top 70%</string>
  <string name="accessibility_action_divider_top_full">Top full screen</string>
  <string name="accessibility_action_pip_resize">Resize</string>
  <string name="accessibility_action_pip_stash">Stash</string>
  <string name="accessibility_action_pip_unstash">Unstash</string>
  <string name="accessibility_action_start_one_handed">Start one-handed mode</string>
  <string name="accessibility_action_stop_one_handed">Exit one-handed mode</string>
  <string name="accessibility_airplane_mode">Airplane mode.</string>
  <string name="accessibility_allow_diagonal_scrolling">Allow diagonal scrolling</string>
  <string name="accessibility_authenticate_hint">authenticate</string>
  <string name="accessibility_back">Back</string>
  <string name="accessibility_banner_message_dismiss">Dismiss</string>
  <string name="accessibility_battery_level">Battery %d percent.</string>
  <string name="accessibility_battery_level_charging">Battery charging, %d percent.</string>
  <string name="accessibility_battery_level_with_estimate">Battery %1$d percent, %2$s</string>
  <string name="accessibility_bluetooth_connected">Bluetooth connected.</string>
  <string name="accessibility_bluetooth_name">Connected to %s.</string>
  <string name="accessibility_brightness">Display brightness</string>
  <string name="accessibility_bubble_dismissed">Bubble dismissed.</string>
  <string name="accessibility_camera_button">Camera</string>
  <string name="accessibility_cast_name">Connected to %s.</string>
  <string name="accessibility_clear_all">Clear all notifications.</string>
  <string name="accessibility_control_change_favorite">favorite</string>
  <string name="accessibility_control_change_unfavorite">unfavorite</string>
  <string name="accessibility_control_favorite">Favorited</string>
  <string name="accessibility_control_favorite_position">Favorited, position %d</string>
  <string name="accessibility_control_move">Move to position %d</string>
  <string name="accessibility_control_move_down">Move down</string>
  <string name="accessibility_control_move_left">Move left</string>
  <string name="accessibility_control_move_right">Move right</string>
  <string name="accessibility_control_move_up">Move up</string>
  <string name="accessibility_control_not_favorite">Unfavorited</string>
  <string name="accessibility_control_zoom_in">Zoom in</string>
  <string name="accessibility_control_zoom_out">Zoom out</string>
  <string name="accessibility_data_saver_on">Data Saver is on</string>
  <string name="accessibility_data_signal_full">Data signal full.</string>
  <string name="accessibility_desc_close">Close</string>
  <string name="accessibility_desc_lock_screen">Lock screen.</string>
  <string name="accessibility_desc_notification_icon">%1$s notification: %2$s</string>
  <string name="accessibility_desc_notification_shade">Notification shade.</string>
  <string name="accessibility_desc_qs_notification_shade">Quick settings and Notification shade.</string>
  <string name="accessibility_desc_quick_settings">Quick settings.</string>
  <string name="accessibility_desc_quick_settings_edit">Quick settings editor.</string>
  <string name="accessibility_desc_work_lock">Work lock screen</string>
  <string name="accessibility_detail_switch">Switch between toggles</string>
  <string name="accessibility_divider">Split screen divider</string>
  <string name="accessibility_enter_hint">enter device</string>
  <string name="accessibility_enter_lock_setting">Tap to open Wallpaper Carousel settings</string>
  <string name="accessibility_enter_lock_wallpaper">Tap to open Wallpaper Carousel</string>
  <string name="accessibility_ethernet_connected">Ethernet.</string>
  <string name="accessibility_ethernet_disconnected">Ethernet disconnected.</string>
  <string name="accessibility_fingerprint_bouncer">Authentication required. Touch the fingerprint sensor to authenticate.</string>
  <string name="accessibility_fingerprint_label">Fingerprint sensor</string>
  <string name="accessibility_floating_button_action_double_tap_to_toggle">toggle</string>
  <string name="accessibility_floating_button_action_move_bottom_left">Move bottom left</string>
  <string name="accessibility_floating_button_action_move_bottom_right">Move bottom right</string>
  <string name="accessibility_floating_button_action_move_out_edge_and_show">Move out edge and show</string>
  <string name="accessibility_floating_button_action_move_to_edge_and_hide_to_half">Move to edge and hide</string>
  <string name="accessibility_floating_button_action_move_top_left">Move top left</string>
  <string name="accessibility_floating_button_action_move_top_right">Move top right</string>
  <string name="accessibility_floating_button_action_remove_menu">Remove</string>
  <string name="accessibility_floating_button_docking_tooltip">Move button to the edge to hide it temporarily</string>
  <string name="accessibility_floating_button_migration_tooltip">Tap to open accessibility features. Customize or replace this button in Settings.

<annotation id="link">View settings</annotation></string>
  <string name="accessibility_floating_button_undo">Undo</string>
  <string name="accessibility_floating_button_undo_message_label_text">%s shortcut removed</string>
  <string name="accessibility_floating_button_undo_message_number_text">{count, plural, =1 {# shortcut removed} other {# shortcuts removed} }</string>
  <string name="accessibility_home">Home</string>
  <string name="accessibility_ime_switch_button">Switch input method</string>
  <string name="accessibility_key">Custom navigation button</string>
  <string name="accessibility_keyboard_delete_button">Delete</string>
  <string name="accessibility_keyboard_letter_board_caps_lock_button">Caps lock</string>
  <string name="accessibility_keyboard_letter_board_shift2number_button">Numbers</string>
  <string name="accessibility_keyboard_letter_board_shift2symbol_button">Symbols</string>
  <string name="accessibility_keyboard_ok_button">Enter</string>
  <string name="accessibility_keyboard_symbol_board_shift2letter_button">Letters</string>
  <string name="accessibility_keyboard_symbol_board_symbol_lock_button">Symbols lock</string>
  <string name="accessibility_keyguard_face_unlock_view">Face unlock</string>
  <string name="accessibility_left_control_center_button">Shortcut</string>
  <string name="accessibility_left_lock_screen_magazine_button">Wallpaper Carousel</string>
  <string name="accessibility_menu">Menu</string>
  <string name="accessibility_rotate_button">Rotate screen</string>
  <string name="cancel">Cancel</string>
  <string name="clear_all_notifications_text">Clear all</string>
  <string name="controls_media_close_session">Hide this media control for %1$s?</string>
  <string name="controls_media_dismiss_button">Hide</string>
  <string name="controls_media_settings_button">Settings</string>
  <string name="emergency_call_string">Emergency</string>
  <string name="manage_notifications_history_text">History</string>
  <string name="phone_locked_foget_password">Forgot password?</string>
  <string name="phone_locked_foget_password_mehod_back">Back</string>
  <string name="phone_locked_foget_password_method">Forgot password?</string>
  <string name="phone_locked_foget_password_method_content"><Data>You have to &lt;font color=#a5220e&gt;erase all data &lt;/font&gt;on your device, including photos and contacts, and then set a new Lock screen password.</Data></string>
  <string name="phone_locked_foget_password_method_next">Next</string>
  <string name="phone_locked_foget_password_ok">Got it</string>
  <string name="phone_locked_forget_password_suggesstion_one_content"><Data>Power off your device, press and hold the &lt;font color=#a5220e&gt;Power button&lt;/font&gt; and the &lt;font color=#a5220e&gt;Volume up button&lt;/font&gt; simultaneously until you see the Mi logo.</Data></string>
  <string name="phone_locked_forget_password_suggesstion_two_content"><Data>Select &lt;font color=#a5220e&gt;"Wipe &amp;amp; Reset"&lt;/font&gt; and wait until the device reboots.</Data></string>
  <string name="phone_locked_forget_password_suggesstions_title">How to erase data?</string>
  <string name="phone_locked_string">This device is locked</string>
  <string name="unlock_to_see_notif_text">Unlock to see older notifications</string>
  <string name="zen_mode_warnings_all_time_content">Notifications and calls will be silenced</string>
  <string name="zen_mode_warnings_quit_immediately">Turn off</string>
  <string name="zen_mode_warnings_title">DND is on</string>
</resources>