<?xml version='1.0' encoding='utf-8' ?>
<com.android.systemui.statusbar.notification.row.FooterView android:visibility="gone"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:paddingStart="16.0dp"
                      android:paddingEnd="16.0dp" xmlns:android="http://schemas.android.com/apk/res/android">
  <com.android.systemui.statusbar.AlphaOptimizedFrameLayout android:id="@id/id_0x7f0a0223"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">
    <TextView android:textAppearance="?android:attr/textAppearanceButton"
              android:gravity="center"
              android:layout_gravity="center_horizontal"
              android:id="@id/unlock_prompt_footer"
              android:visibility="gone"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="12.0dp"
              android:text="@string/unlock_to_see_notif_text"
              android:drawablePadding="8.0dp" />
    <com.android.systemui.statusbar.notification.row.FooterViewButton android:textColor="@color/notif_pill_text"
                          android:layout_gravity="start"
                          android:id="@id/manage_text"
                          android:background="@drawable/notif_footer_btn_background"
                          android:focusable="true"
                          android:layout_width="wrap_content"
                          android:layout_height="48.0dp"
                          android:layout_marginTop="12.0dp"
                          android:text="@string/manage_notifications_history_text"
                          android:contentDescription="@string/manage_notifications_history_text"
                          style="@style/TextAppearance.NotificationSectionHeaderButton" />
    <com.android.systemui.statusbar.notification.row.FooterViewButton android:textColor="@color/notif_pill_text"
                          android:layout_gravity="end"
                          android:id="@id/dismiss_text"
                          android:background="@drawable/notif_footer_btn_background"
                          android:focusable="true"
                          android:layout_width="wrap_content"
                          android:layout_height="48.0dp"
                          android:layout_marginTop="12.0dp"
                          android:text="@string/clear_all_notifications_text"
                          android:contentDescription="@string/accessibility_clear_all"
                          style="@style/TextAppearance.NotificationSectionHeaderButton" />
  </com.android.systemui.statusbar.AlphaOptimizedFrameLayout>
</com.android.systemui.statusbar.notification.row.FooterView>