<?xml version='1.0' encoding='utf-8' ?>
<RelativeLayout android:id="@id/unlockscreen_lockout_id"
                android:background="@android:color/black"
                android:paddingBottom="@dimen/miui_unlock_lockout_page_padding"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingStart="@dimen/miui_unlock_lockout_page_padding"
                android:paddingEnd="@dimen/miui_unlock_lockout_page_padding" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
  <TextView android:textSize="@dimen/miui_unlock_lockout_title_text_size"
            android:textColor="@color/unlock_screen_lockout_phone_locked"
            android:id="@id/phone_locked_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/miui_unlock_lockout_title_margin_top"
            android:text="@string/phone_locked_string"
            android:layout_centerHorizontal="true" />
  <TextView android:textSize="@dimen/miui_unlock_lockout_content_text_size"
            android:textColor="@color/unlock_screen_lockout_phone_locked_timeout"
            android:id="@id/phone_locked_timeout_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/miui_unlock_lockout_content_margin_top"
            android:layout_below="@id/phone_locked_textview"
            android:layout_centerHorizontal="true" />
  <com.android.keyguard.EmergencyButton android:textSize="@dimen/miui_unlock_lockout_button_text_size"
                        android:textColor="@color/miui_keyguard_lock_out_forget_password_emergency"
                        android:id="@id/emergencyCallButton"
                        android:paddingTop="@dimen/miui_unlock_lockout_button_padding"
                        android:paddingBottom="@dimen/miui_unlock_lockout_button_padding"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/miui_unlock_lockout_emergency_btn_margin_bottom"
                        android:text="@string/emergency_call_string"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentBottom="true"
                        android:textAllCaps="@bool/kg_use_all_caps"
                        style="@style/Keyguard.TextView.EmergencyButton" />
  <Button android:textSize="@dimen/miui_unlock_lockout_button_text_size"
          android:textColor="@color/miui_keyguard_lock_out_forget_password_emergency"
          android:id="@id/foget_password"
          android:paddingTop="@dimen/miui_unlock_lockout_button_padding"
          android:paddingBottom="@dimen/miui_unlock_lockout_button_padding"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/miui_unlock_lockout_emergency_btn_margin_bottom"
          android:text="@string/phone_locked_foget_password"
          android:layout_alignParentRight="true"
          android:layout_alignParentBottom="true"
          style="@style/Keyguard.TextView.EmergencyButton" />
  <LinearLayout android:gravity="center"
                android:orientation="vertical"
                android:id="@id/forget_password_hint_container"
                android:background="@color/unlock_screen_lockout_forget_pw_hint_container_bg"
                android:visibility="invisible"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
    <TextView android:textSize="@dimen/miui_unlock_lockout_forgot_password_title_text_size"
              android:textColor="@android:color/white"
              android:id="@id/forget_password_method_title"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/phone_locked_foget_password_method" />
    <TextView android:textSize="@dimen/miui_unlock_lockout_forgot_password_content_text_size"
              android:textColor="@color/unlock_screen_lockout_phone_locked_forget_pw_content"
              android:id="@id/forget_password_method_content"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/miui_unlock_lockout_forgot_password_content_margin_top"
              android:text="@string/phone_locked_foget_password_method_content"
              android:lineSpacingExtra="@dimen/miui_unlock_lockout_text_line_space"
              android:layout_marginStart="@dimen/miui_unlock_lockout_text_margin"
              android:layout_marginEnd="@dimen/miui_unlock_lockout_text_margin" />
    <LinearLayout android:orientation="horizontal"
                  android:id="@id/forget_password_method_btn_layout"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/miui_unlock_lockout_forgot_password_method_margin_top"
                  android:layout_marginStart="@dimen/miui_unlock_lockout_text_margin"
                  android:layout_marginEnd="@dimen/miui_unlock_lockout_text_margin">
      <TextView android:textSize="@dimen/miui_unlock_lockout_button_text_size"
                android:textColor="@color/unlock_screen_lockout_forget_pw_method"
                android:gravity="center"
                android:id="@id/forget_password_method_back"
                android:background="@drawable/miui_keyguard_forget_password_suggestion_left"
                android:layout_width="0.0dp"
                android:layout_height="wrap_content"
                android:text="@string/phone_locked_foget_password_mehod_back"
                android:layout_weight="1.0" />
      <TextView android:textSize="@dimen/miui_unlock_lockout_button_text_size"
                android:textColor="@color/unlock_screen_lockout_forget_pw_method"
                android:gravity="center"
                android:id="@id/forget_password_method_next"
                android:background="@drawable/miui_keyguard_forget_password_suggestion_right"
                android:layout_width="0.0dp"
                android:layout_height="wrap_content"
                android:text="@string/phone_locked_foget_password_method_next"
                android:layout_weight="1.0" />
    </LinearLayout>
  </LinearLayout>
  <LinearLayout android:gravity="center_vertical"
                android:orientation="vertical"
                android:id="@id/forget_password_suggesstion"
                android:background="@color/unlock_screen_lockout_forget_pw_suggesstion"
                android:visibility="invisible"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
    <TextView android:textSize="@dimen/miui_unlock_lockout_forgot_password_title_text_size"
              android:textColor="@android:color/white"
              android:layout_gravity="center"
              android:id="@id/forget_password_suggesstion_title"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/phone_locked_forget_password_suggesstions_title" />
    <com.android.keyguard.KeyguardTextViewDrawable android:textSize="@dimen/miui_unlock_lockout_forgot_password_content_text_size"
                          android:textColor="@color/unlock_screen_lockout_phone_locked_forget_pw_content"
                          android:id="@id/forget_password_suggesstion_one"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_marginTop="@dimen/miui_unlock_lockout_forgot_password_suggesstion_margin_top"
                          android:text="@string/phone_locked_forget_password_suggesstion_one_content"
                          android:drawableLeft="@drawable/miui_keyguard_forget_password_suggesstions_one"
                          android:drawablePadding="@dimen/miui_unlock_lockout_forgot_password_suggesstion_drawable_padding"
                          android:lineSpacingExtra="@dimen/miui_unlock_lockout_text_line_space"
                          android:layout_marginStart="@dimen/miui_unlock_lockout_text_margin"
                          android:layout_marginEnd="@dimen/miui_unlock_lockout_text_margin" />
    <com.android.keyguard.KeyguardTextViewDrawable android:textSize="@dimen/miui_unlock_lockout_forgot_password_content_text_size"
                          android:textColor="@color/unlock_screen_lockout_phone_locked_forget_pw_content"
                          android:id="@id/forget_password_suggesstion_two"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_marginTop="@dimen/miui_unlock_lockout_forgot_password_suggesstion_two_margin_top"
                          android:text="@string/phone_locked_forget_password_suggesstion_two_content"
                          android:drawableLeft="@drawable/miui_keyguard_forget_password_suggesstions_two"
                          android:drawablePadding="@dimen/miui_unlock_lockout_forgot_password_suggesstion_drawable_padding"
                          android:lineSpacingExtra="@dimen/miui_unlock_lockout_text_line_space"
                          android:layout_marginStart="@dimen/miui_unlock_lockout_text_margin"
                          android:layout_marginEnd="@dimen/miui_unlock_lockout_text_margin" />
    <TextView android:textSize="@dimen/miui_unlock_lockout_button_text_size"
              android:textColor="@color/unlock_screen_lockout_forget_pw_method"
              android:gravity="center"
              android:id="@id/forget_password_suggesstion_ok"
              android:background="@drawable/miui_keyguard_forget_password_suggestion_declear"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/miui_unlock_lockout_ok_btn_margin_bottom"
              android:text="@string/phone_locked_foget_password_ok"
              android:layout_marginStart="@dimen/miui_unlock_lockout_text_margin"
              android:layout_marginEnd="@dimen/miui_unlock_lockout_text_margin" />
  </LinearLayout>
</RelativeLayout>