<?xml version='1.0' encoding='utf-8' ?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
  <TextView android:ellipsize="marquee"
            android:gravity="center|top"
            android:id="@id/remove_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0.0dp"
            android:text="@string/controls_media_close_session"
            android:singleLine="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:fontFamily="@android:string/config_wearMediaControlsPackage"
            android:layout_marginStart="@dimen/qs_media_padding"
            android:layout_marginEnd="@dimen/qs_media_padding"
            app:r0x7f04042a="@id/cancel"
            app:r0x7f04042f="0"
            app:r0x7f040443="0"
            app:r0x7f040446="@id/settings" />
  <ImageButton android:layout_gravity="top"
               android:id="@id/settings"
               android:background="@drawable/qs_media_light_source"
               android:layout_width="0.0dp"
               android:layout_height="wrap_content"
               android:layout_marginTop="4.0dp"
               android:src="@drawable/ic_settings"
               android:contentDescription="@string/controls_media_settings_button"
               android:layout_marginEnd="4.0dp"
               app:r0x7f04042f="0"
               app:r0x7f040437="@dimen/min_clickable_item_size"
               app:r0x7f040447="0"
               app:r0x7f04044e="@dimen/min_clickable_item_size" />
  <FrameLayout android:id="@id/dismiss"
               android:background="@drawable/qs_media_light_source"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginBottom="@dimen/qs_media_padding"
               android:layout_marginStart="@dimen/qs_media_padding"
               android:layout_marginEnd="@dimen/qs_media_action_spacing"
               app:r0x7f040423="true"
               app:r0x7f040429="0"
               app:r0x7f040430="@id/cancel"
               app:r0x7f040437="@dimen/min_clickable_item_size"
               app:r0x7f04043a="2"
               app:r0x7f040443="0"
               app:r0x7f040446="@id/remove_text">
    <TextView android:layout_gravity="center|top"
              android:id="@id/dismiss_text"
              android:background="@drawable/qs_media_solid_button"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/controls_media_dismiss_button"
              app:r0x7f04044e="@dimen/min_clickable_item_size"
              style="@style/MediaPlayer.SolidButton" />
  </FrameLayout>
  <FrameLayout android:id="@id/cancel"
               android:background="@drawable/qs_media_light_source"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginBottom="@dimen/qs_media_padding"
               android:layout_marginStart="@dimen/qs_media_action_spacing"
               android:layout_marginEnd="@dimen/qs_media_padding"
               app:r0x7f040423="true"
               app:r0x7f040429="0"
               app:r0x7f04042f="0"
               app:r0x7f040437="@dimen/min_clickable_item_size"
               app:r0x7f040442="@id/dismiss"
               app:r0x7f040446="@id/remove_text"
               app:r0x7f04044e="@dimen/min_clickable_item_size">
    <TextView android:layout_gravity="center|top"
              android:id="@id/cancel_text"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/cancel"
              style="@style/MediaPlayer.OutlineButton" />
  </FrameLayout>
</merge>