<?xml version='1.0' encoding='utf-8' ?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layoutDirection="locale" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
  <ImageView android:id="@id/zen_icon"
             android:layout_width="@dimen/zen_mode_icon_size"
             android:layout_height="@dimen/zen_mode_icon_size"
             android:layout_marginTop="@dimen/zen_mode_icon_top_margin"
             android:src="@drawable/dnd_notification_icon"
             android:contentDescription="@null"
             android:layout_marginStart="@dimen/zen_mode_icon_start_margin"
             app:r0x7f040443="0"
             app:r0x7f040447="0" />
  <TextView android:textSize="@dimen/zen_mode_title_size"
            android:textStyle="bold"
            android:textColor="@color/notification_primary_text_color_light"
            android:ellipsize="end"
            android:id="@id/zen_title"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/miui_notification_content_margin_top"
            android:text="@string/zen_mode_warnings_title"
            android:singleLine="true"
            android:fontFamily="sans-serif-medium"
            android:layout_marginStart="@dimen/zen_mode_title_start_margin"
            android:layout_marginEnd="@dimen/zen_mode_quit_start_margin"
            app:r0x7f040430="@id/zen_quit"
            app:r0x7f04043b="1.0"
            app:r0x7f040442="@id/zen_icon"
            app:r0x7f040447="0" />
  <TextView android:textSize="@dimen/zen_mode_content_size"
            android:textStyle="normal"
            android:textColor="@color/notification_secondary_text_color_light"
            android:id="@id/zen_content"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/zen_mode_content_top_margin"
            android:layout_marginBottom="@dimen/miui_notification_content_margin_bottom"
            android:text="@string/zen_mode_warnings_all_time_content"
            android:fontFamily="sans-serif-medium"
            app:r0x7f040429="0"
            app:r0x7f04042f="@id/zen_title"
            app:r0x7f04043b="1.0"
            app:r0x7f040443="@id/zen_title"
            app:r0x7f040446="@id/zen_title" />
  <TextView android:textSize="@dimen/zen_mode_quit_size"
            android:textStyle="bold"
            android:textColor="@color/notification_action_text_color"
            android:ellipsize="end"
            android:gravity="center"
            android:id="@id/zen_quit"
            android:background="@drawable/notification_action_bg"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/notification_action_height"
            android:text="@string/zen_mode_warnings_quit_immediately"
            android:singleLine="true"
            android:fontFamily="sans-serif-medium"
            android:layout_marginEnd="@dimen/zen_mode_title_end_margin"
            android:fallbackLineSpacing="false"
            app:r0x7f040429="0"
            app:r0x7f04042f="0"
            app:r0x7f040447="0" />
</androidx.constraintlayout.widget.ConstraintLayout>